--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,14 +4,23 @@
  * General Styling
  */
 body {
-  background: #F5F5F5;
+  background: #f9fcff;
 }
 
 #root {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: 100vh;
 }
 
@@ -78,31 +87,51 @@ body {
 header {
   width: 100vw;
   height: 9.5vh;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   background-color: #0D3273;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-left: 10.12rem;
   padding-right: 10.12rem;
 }
+
 header ul {
   display: inherit;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 18vw;
 }
+
 header .v-div {
   width: 0.125rem;
   height: 1.6875rem;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   background-color: #FFFFFF;
 }
+
 header .user-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 1rem;
 }
+
 header #selected {
   position: absolute;
   border-radius: 1rem;
@@ -112,6 +141,7 @@ header #selected {
   top: 3.6rem;
   left: 10.12rem;
 }
+
 header a:hover {
   color: #CEA600;
 }
@@ -124,37 +154,62 @@ footer {
   width: 100vw;
   background: #092657;
 }
+
 footer .footer-content {
   margin-left: 10.12rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 50vw;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding-top: 0.8vh;
   gap: 2vw;
 }
+
 footer .footer-content a {
   text-decoration: underline;
 }
+
 footer .footer-content a:hover {
   color: #CEA600;
 }
+
 footer .footer-content div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-width: 8vw;
-  flex-direction: column;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 3px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
+
 footer .footer-content div > p {
   max-width: 10vw;
 }
+
 footer .footer-content div article {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 15px;
 }
+
 footer .footer-content .v-div {
   min-width: 1px;
   height: 53px;
@@ -168,61 +223,114 @@ footer .footer-content .v-div {
   padding-left: 10.12rem;
   padding-right: 10.12rem;
   padding-top: 4rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 1.25rem;
   height: 82.5vh;
 }
+
 #dashboard .dashboard-card {
   width: 25vw;
   height: 66vh;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   border-radius: 2.375rem;
   border: 1px solid #E5E5E5;
   background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 #dashboard .dashboard-card .dashboard-card-header {
   width: 100%;
   padding: 2rem;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   height: 7.5rem;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   text-align: left;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
+
 #dashboard .small-card {
-  width: 12vw;
+  width: 10vw;
   height: 24vh;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-radius: 2.375rem;
   border: 1px solid #E5E5E5;
   background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
 }
+
 #dashboard .small-card .small-card-content {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   height: 9.125rem;
   width: 100%;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
+
 #dashboard .small-card:hover {
-  transform: translateY(-5px) scale(1.005) translateZ(0);
-  box-shadow: 0px 13px 24px 0px rgba(149, 157, 165, 0.2);
+  -webkit-transform: translateY(-5px) scale(1.005) translateZ(0);
+          transform: translateY(-5px) scale(1.005) translateZ(0);
+  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
+          box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
+  -webkit-transition: background-color 500ms linear;
   transition: background-color 500ms linear;
 }
+
 #dashboard .small-card:active {
-  transform: scale(1) translateZ(0);
-  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
-}/*# sourceMappingURL=style.css.map */
+  -webkit-transform: scale(1) translateZ(0);
+          transform: scale(1) translateZ(0);
+  -webkit-box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+          box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+}
+/*# sourceMappingURL=style.css.map */
