--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -12,7 +12,7 @@ $accent: #CEA600;
  * General Styling
  */
 body {
-    background: #F5F5F5;
+    background: #f9fcff;
 }
 
 #root {
@@ -202,7 +202,7 @@ footer {
         border-radius: 2.375rem;
         border: 1px solid #E5E5E5;
         background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-        box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+        box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
 
         display: flex;
         flex-direction: column;
@@ -223,7 +223,7 @@ footer {
     }
 
     .small-card {
-        width: 12vw;
+        width: 10vw;
         height: 24vh;
         flex-shrink: 0;
         display: flex;
@@ -232,7 +232,7 @@ footer {
         border-radius: 2.375rem;
         border: 1px solid #E5E5E5;
         background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-        box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+        box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
 
         .small-card-content {
             display: inline-flex;
@@ -247,7 +247,7 @@ footer {
 
     .small-card:hover {
         transform: translateY(-5px) scale(1.005) translateZ(0);
-        box-shadow: 0px 13px 24px 0px rgba(149, 157, 165, 0.20);
+        box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
         transition: background-color 500ms linear;
     }
 
