--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,30 +8,24 @@ body {
 }
 
 #root {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   height: 100vh;
 }
 
+/**
+ * Text Styling
+ */
 .text-header {
   color: #FFFFFF;
-  text-align: center;
   font-family: Inter;
   font-size: 1rem;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -73,7 +67,6 @@ body {
 
 .text-card-count {
   color: #0D3273;
-  text-align: center;
   font-family: Inter;
   font-size: 3.3125rem;
   font-style: normal;
@@ -87,51 +80,31 @@ body {
 header {
   width: 100vw;
   height: 9.5vh;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   background-color: #0D3273;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding-left: 10.12rem;
   padding-right: 10.12rem;
 }
-
 header ul {
   display: inherit;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   width: 18vw;
 }
-
 header .v-div {
   width: 0.125rem;
   height: 1.6875rem;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
   background-color: #FFFFFF;
 }
-
 header .user-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 1rem;
 }
-
 header #selected {
   position: absolute;
   border-radius: 1rem;
@@ -141,7 +114,6 @@ header #selected {
   top: 3.6rem;
   left: 10.12rem;
 }
-
 header a:hover {
   color: #CEA600;
 }
@@ -154,62 +126,37 @@ footer {
   width: 100vw;
   background: #092657;
 }
-
 footer .footer-content {
   margin-left: 10.12rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 50vw;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   padding-top: 0.8vh;
   gap: 2vw;
 }
-
 footer .footer-content a {
   text-decoration: underline;
 }
-
 footer .footer-content a:hover {
   color: #CEA600;
 }
-
 footer .footer-content div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   min-width: 8vw;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 3px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
 }
-
 footer .footer-content div > p {
   max-width: 10vw;
 }
-
 footer .footer-content div article {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 15px;
 }
-
 footer .footer-content .v-div {
   min-width: 1px;
   height: 53px;
@@ -223,145 +170,117 @@ footer .footer-content .v-div {
   padding-left: 10.12rem;
   padding-right: 10.12rem;
   padding-top: 4rem;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
   gap: 3.6vw;
   height: 82.5vh;
 }
-
 #dashboard .card-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 1rem;
 }
-
 #dashboard .card-wrapper .small-cards {
   width: 50vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
 }
-
 #dashboard .dashboard-card {
-  width: 25vw;
-  height: 66vh;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  border-radius: 2.375rem;
-  border: 1px solid #E5E5E5;
-  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
-          box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 24vw;
+  height: 62vh;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
+  background: #0D3273;
 }
-
+#dashboard .dashboard-card h1, #dashboard .dashboard-card p {
+  color: #FFFFFF;
+}
 #dashboard .dashboard-card .dashboard-card-header {
   width: 100%;
   padding: 2rem;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
   height: 7.5rem;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   text-align: left;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
 }
-
+#dashboard .dashboard-card .dashboard-card-accent {
+  width: 24vw;
+  height: 60vh;
+  background: #c9269b;
+  position: absolute;
+  left: 10vw;
+  top: 22.1vh;
+  z-index: -1;
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+}
 #dashboard .small-card {
   width: 10vw;
   height: 24vh;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 2.375rem;
   border: 1px solid #E5E5E5;
   background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
-          box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
 #dashboard .small-card .small-card-content {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
   height: 9.125rem;
   width: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
 }
-
 #dashboard .small-card:hover {
-  -webkit-transform: translateY(-5px) scale(1.005) translateZ(0);
-          transform: translateY(-5px) scale(1.005) translateZ(0);
-  -webkit-box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
-          box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
-  -webkit-transition: background-color 500ms linear;
+  transform: translateY(-5px) scale(1.005) translateZ(0);
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
   transition: background-color 500ms linear;
 }
-
 #dashboard .small-card:active {
-  -webkit-transform: scale(1) translateZ(0);
-          transform: scale(1) translateZ(0);
-  -webkit-box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
-          box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  transform: scale(1) translateZ(0);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
 }
-/*# sourceMappingURL=style.css.map */
+#dashboard .large-cards {
+  display: flex;
+  width: 36.7vw;
+  justify-content: space-between;
+  align-items: center;
+}
+#dashboard .large-cards .large-card {
+  width: 17vw;
+  height: 40vh;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
+}
+#dashboard .large-cards .large-card h1 {
+  text-align: center;
+  color: #0D3273;
+}
+#dashboard .large-cards .large-card:hover {
+  transform: translateY(-5px) scale(1.005) translateZ(0);
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
+  transition: background-color 500ms linear;
+}
+#dashboard .large-cards .large-card:active {
+  transform: scale(1) translateZ(0);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+}/*# sourceMappingURL=style.css.map */
