--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -23,61 +23,42 @@ body {
     height: 100vh;
 }
 
-.text-header {
-    color: $text;
-    text-align: center;
+/**
+ * Text Styling
+ */
+ @mixin text-styling($color, $font-size, $font-weight) {
+    color: $color;
     font-family: Inter;
-    font-size: 1rem;
+    font-size: $font-size;
     font-style: normal;
-    font-weight: 600;
+    font-weight: $font-weight;
     line-height: normal;
-    text-transform: uppercase;
+}
+
+.text-header {
+    @include text-styling($text, 1rem, 600);
+    text-align: center;
+    text-transform: uppercase
 }
 
 .text-footer-title {
-    color: $text;
-    font-family: Inter;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
+    @include text-styling($text, 10px, 800);
 }
 
 .text-footer {
-    color: $text;
-    font-family: Inter;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    @include text-styling($text, 10px, 400);
 }
 
 .text-title {
-    color: $primary;
-    font-family: Inter;
-    font-size: 2.25rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+    @include text-styling($primary, 2.25rem, 700);
 }
 
 .text-card-title {
-    color: $text-secondary;
-    font-family: Inter;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    @include text-styling($text-secondary, 1.5rem, 500);
 }
 
 .text-card-count {
-    color: $primary;
-    text-align: center;
-    font-family: Inter;
-    font-size: 3.3125rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+    @include text-styling($primary, 3.3125rem, 700);
 }
 
 /**
@@ -211,19 +192,27 @@ footer {
 
     }
 
-    .dashboard-card {
-        width: 25vw;
-        height: 66vh;
-        flex-shrink: 0;
-        border-radius: 2.375rem;
+    @mixin card-styling($width, $height) {
+        width: $width;
+        height: $height;
+        // border-radius: 2.375rem;
         border: 1px solid #E5E5E5;
         background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
         box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
-
+    }
+    
+    .dashboard-card {
+        width: 24vw;
+        height: 62vh;
         display: flex;
         flex-direction: column;
         align-items: center;
+        background: $primary;
 
+        h1, p {
+            color: $text;
+        }
+    
         .dashboard-card-header {
             width: 100%;
             padding: 2rem;
@@ -236,20 +225,25 @@ footer {
             flex-shrink: 0;
         }
 
+        .dashboard-card-accent {
+            width: 24vw;
+            height: 60vh;
+            background: #c9269b;
+            position: absolute;
+            left: 10vw;
+            top: 22.1vh;
+            z-index: -1;
+            box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
+        }
     }
-
+    
     .small-card {
-        width: 10vw;
-        height: 24vh;
+        @include card-styling(10vw, 24vh);
         flex-shrink: 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-radius: 2.375rem;
-        border: 1px solid #E5E5E5;
-        background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-        box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
-
+    
         .small-card-content {
             display: inline-flex;
             height: 9.125rem;
@@ -259,7 +253,7 @@ footer {
             align-items: center;
             flex-shrink: 0;
         }
-    }
+    }  
 
     .small-card:hover {
         transform: translateY(-5px) scale(1.005) translateZ(0);
@@ -270,6 +264,45 @@ footer {
     .small-card:active {
         transform: scale(1) translateZ(0);
         box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+    }
+
+    .large-cards {
+        display: flex;
+        width: 36.7vw;
+        justify-content: space-between;
+        align-items: center;
+
+        .large-card {
+            @include card-styling(17vw, 40vh);
+            // border-radius: 2.375rem;
+            border: 1px solid #E5E5E5;
+            background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+            box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            padding: 2rem;
+
+            h1 {
+                text-align: center;
+                color: $primary;
+            }
+
+        }
+
+        .large-card:hover {
+            transform: translateY(-5px) scale(1.005) translateZ(0);
+            box-shadow: rgba(149, 157, 165, 0.15) 0px 13px 24px;
+            transition: background-color 500ms linear;
+        }
+    
+        .large-card:active {
+            transform: scale(1) translateZ(0);
+            box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+        }
+
     }
 
 }
