--- a/src/css/style.css
+++ b/src/css/style.css
@@ -503,3 +503,142 @@ footer .footer-content .v-div {
   width: 25px;
   height: 25px;
 }/*# sourceMappingURL=style.css.map */
+
+
+/* -------------------------------------- */
+/* 
+  Login styling 
+*/
+
+#login-card {
+  width: 49rem;
+  height: 28em;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+}
+
+.login-form {
+  text-align: center;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.875rem;
+}
+
+.login-form form {
+  margin-bottom: 20px;
+}
+
+.login-form input, .login-form button {
+  display: block;
+  margin: 10px auto;
+  width: 200px;
+}
+
+.login-form a {
+  display: block;
+  margin: 10px auto;
+}
+
+.username-form-group {
+  padding-top: 3.12rem;
+  margin-left: -25rem;
+}
+
+.password-form-group {
+  padding-top: 1.88rem;
+  margin-left: -25rem;
+}
+
+#username, #password {
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 525;
+  line-height: normal;
+}
+
+.username-input, .password-input {
+  height: 2.5rem;
+  flex-shrink: 0;
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset;
+}
+
+input[type="text"] {
+  margin-left: 22rem;
+  width: 30rem;
+  padding-left: 0.8rem;
+  font-family: Inter;
+  font-size: 1rem;
+}
+
+input[type="password"] {
+  margin-left: 22rem;
+  width: 30rem;
+  padding-left: 0.8rem;
+}
+
+
+#forgotten-details {
+  color: var(--Secondary-Text, #939393);
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.1rem;
+  font-style: italic;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: -2rem;
+}
+
+#get-help {
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-top: 0.4rem;
+}
+
+#login-button {
+  padding-top: 1rem;
+}
+
+#login-button-text {
+  width: 11.0625rem;
+  height: 2.75rem;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: var(--Primary, #0D3273);
+  box-shadow: 0px 5px 4px 0px #092657 inset;
+  color: var(--Title-Text, #FEFEFE);
+  font-family: Inter;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+/* -------------------------------------- */
+/* 
+  Submit EC styling 
+*/
+
+#submit-ec-card {
+  width: 49rem;
+  height: 28em;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+}
+
