--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -309,15 +309,24 @@ footer {
 */
 
 #FAQ {
-    width: 100%;
-    margin: 2rem 0 2rem 0;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+  width: 100%;
+  height: 100%;
+  margin: 2rem 0 2rem 0;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+
+  @mixin faq-text-styling($color) {
+    color: $color;
+    font-family: Inter;
+    font-size: 21px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
   }
-  
-  #FAQ h1 {
+
+  h1 {
     color: #092657;
     text-align: center;
     font-family: Inter;
@@ -326,193 +335,252 @@ footer {
     font-weight: 700;
     line-height: normal;
   }
-  
-  #FAQ .question-box {
+
+  .question-box {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    p {
+      @include faq-text-styling(#000);
+    }
+
+    .question {
+      display: flex;
+      width: 75vw;
+      height: 100px;
+      padding: 30px 50px;
+      align-items: center;
+      justify-content: space-between;
+      background: #FFF;
+    }
+
+    .closed {
+      border-radius: 50px;
+      border: 1px solid #000;
+    }
+
+    .opened {
+      border-radius: 50px 50px 0px 0px;
+      border-top: 1px solid #000;
+      border-right: 1px solid #000;
+      border-left: 1px solid #000;
+      background: #FFF;
+    }
+
+    .answer {
+      display: flex;
+      width: 75vw;
+      height: 100px;
+      padding: 30px 50px;
+      align-items: center;
+      border-radius: 0px 0px 50px 50px;
+      border: 1px solid #000;
+      background: #0D3273;
+
+      p {
+        @include faq-text-styling(#FEFEFE);
+      }
+    }
   }
+}
   
-  #FAQ .question-box p {
-    color: #000;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  #FAQ .question-box .question {
-    display: flex;
-    width: 75vw;
-    height: 100px;
-    padding: 30px 50px;
-    align-items: center;
-    justify-content: space-between;
-    background: #FFF;
-  }
-  
-  #FAQ .question-box .closed {
-    border-radius: 50px;
-    border: 1px solid #000;
-  }
-  
-  #FAQ .question-box .opened {
-    border-radius: 50px 50px 0px 0px;
-    border-top: 1px solid #000;
-    border-right: 1px solid #000;
-    border-left: 1px solid #000;
-    background: #FFF;
-  }
-  
-  #FAQ .question-box .answer {
-    display: flex;
-    width: 75vw;
-    height: 100px;
-    padding: 30px 50px;
-    align-items: center;
-    border-radius: 0px 0px 50px 50px;
-    border: 1px solid #000;
-    background: #0D3273;
-  }
-  
-  #FAQ .question-box .answer p {
-    color: #FEFEFE;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  /* -------------------------------------- */
-  /*
-    Archive styling
-  */
-  
-  #archive {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  
+/* -------------------------------------- */
+/*
+  Archive styling
+*/
+
+#archive {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
   /* Archive nav */
-  #archive #archive-views {
+  #archive-views {
     padding: 2rem 2rem 2rem 5rem;
     display: flex;
     align-items: center;
     gap: 20%;
     background: #FFF;
+
+    h1 {
+      @include text-styling(#0D3273, 36px, 700);
+    }
+
+    h2 {
+      @include text-styling(#000, 21px, 500);
+    }
+
+    .selected {
+      text-decoration: underline;
+    }
   }
-  
-  #archive #archive-views h1 {
-    color: #0D3273;
-    font-family: Inter;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-  }
-  
-  #archive #archive-views h2 {
-    color: #000;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  #archive #archive-views .selected {
-    text-decoration: underline;
-  }
-  
-  /* Archive search bar */
-  #archive #search-bar {
-    margin-left: 4rem;
-    padding: 1rem;
+
+  #archive-main-content {
     display: flex;
-    align-items: center;
-    gap: 20px;
+    flex-direction: column;
+    align-self: center;
+    gap: 2rem;
   }
-  
-  #archive #search-bar input {
-    padding: 0.75rem;
-    border: 1px solid black;
-    border-radius: 25px;
-    background: #FFF;
-    font-family: Inter;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
+
   /* Archive ticket boxes */
-  #archive #ticket-boxes {
+  #archive-ticket-boxes {
     margin: 0 5rem 0 5rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: flex-start;
-    gap: 2rem;
+    gap: 2rem; 
   }
+}
+
+/* -------------------------------------- */
+/*
+  Issues styling
+*/
+#issues {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+
+  #issues-side-bar {
+    height: 100%;
+    padding: 3rem;
+    display: flex;
+    background-color: #FFF;
+
+    h1 {
+      @include text-styling(#0D3273, 36px, 700);
+    }
+  }
+
+  #issues-main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    #issues-main-content {
+      width: 100%;
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-content: center;
+      align-self: center;
+      gap: 2rem;
+
+      /* Issues ticket boxes */
+      #issues-ticket-boxes {
+        margin: 0 5rem 0 5rem;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        gap: 2rem; 
+      }
+    }
+  }
+}
+
+/* -------------------------------------- */
+/*
+  SearchBar styling
+*/
+.search-bar {
+  margin-left: 4rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+  input {
+    @include text-styling(#000, 1rem, 500);
+    padding: 0.75rem;
+    border: 1px solid black;
+    border-radius: 25px;
+    background: #FFF;
+  }
+}
+
+/* -------------------------------------- */
+/*
+  TicketBox styling
+*/
+.ticket-outer-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 50px;
+  background: #FFF;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
   
-  #archive #ticket-boxes .ticket-box {
+  .ticket-name {
+    height: 100%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    border-radius: 50px 0 0 50px;
+    background-color: rgb(20, 95, 183);
+    
+    h2 {
+      @include text-styling(#FFF, 21px, 500);
+    }
+  }
+
+  .ticket-inner-box {
     padding: 2rem;
     display: flex;
     flex-direction: row;
-    align-items: center;
     gap: 3.5rem;
-    border-radius: 50px;
-    background: #FFF;
-    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
-  }
-  
-  #archive #ticket-boxes .ticket-box h3 {
-    color: #0D3273;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-  }
-  
-  #archive #ticket-boxes .ticket-box p {
-    color: #000;
-    font-family: Inter;
-    font-size: 21px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-  }
-  
-  #archive #ticket-boxes .ticket-box .info {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    gap: 5px;
+
+    h3 {
+      @include text-styling(#0D3273, 21px, 300);
+    }
+
+    p {
+      @include text-styling(#000, 21px, 500);
+    }
+
+    .info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5px;
+    }
+
+    .feedback {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 1rem;
+      overflow-wrap: break-word;
+    }
   }
-  
-  #archive #ticket-boxes .ticket-box .feedback {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-    overflow-wrap: break-word;
-  }
-  
-  #archive #nav {
-    margin-bottom: 2rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-self: center;
-    gap: 1rem;
-  }
-  
-  #archive #nav p {
+}
+
+
+/* -------------------------------------- */
+/*
+  PageBar styling
+*/
+
+.pagebar-nav {
+  height: 100%;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-self: center;
+  align-content: flex-end;
+  gap: 1rem;
+
+  p {
     color: #000;
     text-align: center;
     font-family: Inter;
@@ -521,8 +589,298 @@ footer {
     font-weight: 500;
     line-height: normal;
   }
-  
-  #archive #nav img{
+
+  img {
     width: 25px;
     height: 25px;
   }
+}
+
+  /* -------------------------------------- */
+/* 
+  Login styling 
+*/
+
+#login-card {
+  width: 49rem;
+  height: 28em;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+}
+
+.login-form {
+  text-align: center;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.875rem;
+}
+
+.login-form form {
+  margin-bottom: 20px;
+}
+
+.login-form input, .login-form button {
+  display: block;
+  margin: 10px auto;
+  width: 200px;
+}
+
+.login-form a {
+  display: block;
+  margin: 10px auto;
+}
+
+.username-form-group {
+  padding-top: 3.12rem;
+  margin-left: -25rem;
+}
+
+.password-form-group {
+  padding-top: 1.88rem;
+  margin-left: -25rem;
+}
+
+#username, #password {
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 525;
+  line-height: normal;
+}
+
+.username-input, .password-input {
+  height: 2.5rem;
+  flex-shrink: 0;
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset;
+}
+
+input[type="text"] {
+  margin-left: 22rem;
+  width: 30rem;
+  padding-left: 0.8rem;
+  font-family: Inter;
+  font-size: 1rem;
+}
+
+input[type="password"] {
+  margin-left: 22rem;
+  width: 30rem;
+  padding-left: 0.8rem;
+}
+
+
+#forgotten-details {
+  color: var(--Secondary-Text, #939393);
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.1rem;
+  font-style: italic;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: -2rem;
+}
+
+#get-help {
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.1rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-top: 0.4rem;
+}
+
+#login-button {
+  padding-top: 1rem;
+}
+
+#login-button-text {
+  width: 11.0625rem;
+  height: 2.75rem;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: var(--Primary, #0D3273);
+  box-shadow: 0px 5px 4px 0px #092657 inset;
+  color: var(--Title-Text, #FEFEFE);
+  font-family: Inter;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+/* -------------------------------------- */
+/* 
+  Submit EC styling 
+*/
+
+#submit-ec-card {
+  width: 49rem;
+  height: 48em;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);  
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.label-text {
+  color: var(--Primary, #0D3273);
+  /* Card Title */
+  font-family: Inter;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-left: 1.2rem;
+}
+
+#ec-options {
+  display: flex;
+}
+
+#standard-ec, #urgent-ec {
+  padding-left: 1.2rem;
+  padding-top: 1.68rem;
+}
+
+.ec-form-dropdown {
+  padding-left: 1.2rem;
+  padding-top: 0.24rem;
+}
+
+#ec-reason {
+  height: 2rem;
+}
+
+#summary {
+ display: 'flex';
+ flex-direction: 'column';
+}
+
+#summary-text-box {
+  margin-top: 0.24rem;
+  margin-left: -20.8rem;
+}
+
+#ec-summary-box {
+  width: 46rem;
+  height: 7rem;
+}
+
+
+#affected-assessments, #ec-reason{
+  width: 46rem;
+}
+
+.affected-checkbox{
+  padding-left: 1.2rem;
+  padding-top: 0.24rem;
+}
+
+#file-attachment-box {
+  padding-top: 0.24rem;
+  padding-left: 1.2rem;
+}
+
+
+#submit-form {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.submit-button {
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: var(--Primary, #0D3273);
+  box-shadow: 0px 5px 4px 0px #092657 inset;
+  color: white;
+  width: 10rem;
+  height: 1.8em;
+  flex-shrink: 0;
+  color: var(--Title-Text, #FEFEFE);
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+input[type="checkbox"], input[type="text"], select{
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset; 
+  font-family: Inter;
+}
+
+.assessments-inner-container {
+  background: #F5F5F5;
+}
+
+
+
+input[type="file"] {
+  display: none;
+}
+
+
+.file-upload {
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset;
+  cursor: pointer;
+  color: var(--Secondary-Text, #939393);
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 500;
+  line-height: normal;
+  margin-left: 1.2rem;
+  padding: 0.7rem;
+}
+
+
+#input-file {
+  padding-top: 1.2rem;
+}
+
+
+#affected-modules, #affected-assessments {
+  padding-top: 1rem;
+  font-family: Inter;
+}
+
+#affected-assessments {
+  max-height: 200px;
+  overflow-y: 'auto'
+  
+}
+
+.assessments-outer-container {
+  width: 100%; 
+  height: 8rem; 
+  overflow: hidden; 
+  padding-left: 1.2rem;
+}
+
+.assessments-inner-container {
+  width: 100%;
+  height: 100%; 
+  overflow-y: auto; 
+  border: 1px solid #ccc; 
+}
+
